# Servidor_flask

./: app.py  pyproject.toml  requirements.txt
