[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Proyecto Flask desplegable"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"  # Versión más reciente recomendada

[tool.poetry.scripts]
# Configura aquí el comando principal si lo necesitas, por ejemplo:
start = "python -m flask run"

[tool.pyright]
# Configuración para Pyright
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# Configuración para Ruff
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
